--- a/index.html/about.html
+++ b/index.html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
-    <link rel="stylesheet" href="/project file/main.css">
+    <link rel="stylesheet" href="/index.html/main.css">
 </head>
 <body>
     <!-- Header section -->
@@ -12,22 +12,22 @@
         <div class="logo">Amaka </div>
         <nav>
             <ul>
-                <li><a href="/project file/index.html">Landing Page</a></li>
-                <li><a href="/project file/about.html">About Me</a></li>
-                <li><a href="/project file/project.html">Project</a></li>
-                <li><a href="/project file/contact me.html">Contact Me</a></li>
+                <li><a href="/index.html/index.html">Landing Page</a></li>
+                <li><a href="/index.html/about.html">About Me</a></li>
+                <li><a href="/index.html/project.html">Project</a></li>
+                <li><a href="/index.html/contact me.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
     <!-- About me Section -->
      <section class="abouta">
-<img src="/resources/images/Amaka 2.jpg.jpg" alt="Amaka Okeke">
+<img src="/resources/images/Amaka 2.jpg.jpg" alt="Amaka Okeke" width="30%">
 <div class="abouta-text">
     <h2>About Amaka Okeke</h2>
     <p> Amaka Okeke is currently working at Great Benissant College in Lagos as a 
         tutor in Data Processing and also coaching the senior secondary in coding.
-         I am a creative designer and a developer. who aims to work with small businesses 
-         and marginalized communities to bring their passions to life. I offer both design 
+         She is a creative designer and a developer who aims to work with small businesses 
+         and marginalized communities to bring their passions to life. She offers both design 
          and development services of web applications or websites.</p>
 </div>
      </section>
