--- a/index.html/contact me.html
+++ b/index.html/contact me.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="/project file/main.css">
+    <link rel="stylesheet" href="/index.html/main.css">
 </head>
 <body>
     <!-- Header section -->
@@ -12,31 +12,31 @@
         <div class="logo">Amaka </div>
         <nav>
             <ul>
-                <li><a href="/project file/index.html">Landing Page</a></li>
-                <li><a href="/project file/about.html">About Me</a></li>
-                <li><a href="/project file/project.html">Project</a></li>
-                <li><a href="/project file/contact me.html">Contact Me</a></li>
+                <li><a href="/index.html/index.html">Landing Page</a></li>
+                <li><a href="/index.html/about.html">About Me</a></li>
+                <li><a href="/index.html/project.html">Project</a></li>
+                <li><a href="/index.html/contact me.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
-    <h2>Do You Want To Drive More Scalable Organic Growth? Contact Me </h2>
+    <h2 style="text-align: center;">Do You Want To Drive More Scalable Organic Growth? Contact Me </h2>
     <section id="contact">
-        <h2>Contact me</h2>
         <form action="">
             <label for="name">Name: </label>
             <input type="text" id="name" required>
-            <label for="email">Email</label>
+            <label for="email">Email: </label>
             <input type="email" id="email" required>
             <label for="phoneno">Phone No:</label>
-            <input type="number" id="phoneno">
-            <label for="message">Drop your message</label>
-            <textarea name="message" id=""></textarea>
-            <label for="country">Required</label>
-            <input type="text" id="country" required>
+            <input type="number" id="phoneno" required>
+            <label for="message">Drop your message: </label>
+            <textarea name="message" id="message" required></textarea>
+            <label for="country">country: </label>
+            <input type="text" id="country">
+            <br>
             <button type="submit">Send</button>
         </form>
       </section>
-
+<br>
       <footer>
         <p>2025 Amaka Okeke. All right reserved</p>
         <div class="social-links">
