--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Amaka Landing Page</title>
-    <link rel="stylesheet" href="/project file/main.css">
+    <link rel="stylesheet" href="/index.html/main.css">
 </head>
 <body>
     <!-- Header section -->
@@ -12,10 +12,10 @@
             <div class="logo">Amaka </div>
             <nav>
                 <ul>
-                    <li><a href="/project file/index.html">Landing Page</a></li>
-                <li><a href="/project file/about.html">About Me</a></li>
-                <li><a href="/project file/project.html">Project</a></li>
-                <li><a href="/project file/contact me.html">Contact Me</a></li>
+                    <li><a href="/index.html/index.html">Landing Page</a></li>
+                    <li><a href="/index.html/about.html">About Me</a></li>
+                    <li><a href="/index.html/project.html">Project</a></li>
+                    <li><a href="/index.html/contact me.html">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,7 +39,7 @@
                         What are you waiting for? </p></div>
                         <img src="/resources/images/img_1737055037417.jpg" alt="">
                     </div>
-                    <button> <a href="/project file/project.html">Click here for more</a></button>
+                    <button style="width: 16%; padding: 8px; background-color: aqua;"> <a href="/project file/project.html">Click here for more</a></button>
           </section>
           <!-- About Section -->
           <section id="about">
@@ -50,7 +50,7 @@
                     applications, develop features, and maintain brand consistency 
                     for user-facing interfaces</p>
                 </div>
-                <button> <a href="/project file/about.html">More about me</a></button>
+                <button style="width: 16%; padding: 8px; background-color: aqua;"> <a href="/project file/about.html">More about me</a></button>
           </section>
 
           <!-- Contact form Section-->
@@ -59,13 +59,13 @@
             <form action="">
                 <label for="name">Name: </label>
                 <input type="text" id="name" required>
-                <label for="email">Email</label>
+                <label for="email">Email: </label>
                 <input type="email" id="email" required>
                 <label for="phoneno">Phone No:</label>
                 <input type="number" id="phoneno">
                 <label for="message">Drop your message</label>
                 <textarea name="message" id=""></textarea>
-                <label for="country">Required</label>
+                <label for="country">Country: </label>
                 <input type="text" id="country" required>
                 <button type="submit">Send</button>
             </form>
