--- a/index.html/project.html
+++ b/index.html/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
-    <link rel="stylesheet" href="/project file/main.css">
+    <link rel="stylesheet" href="/index.html/main.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -12,10 +12,10 @@
         <div class="logo">Amaka </div>
         <nav>
             <ul>
-                <li><a href="/project file/index.html">Landing Page</a></li>
-                <li><a href="/project file/about.html">About Me</a></li>
-                <li><a href="/project file/project.html">Project</a></li>
-                <li><a href="/project file/contact me.html">Contact Me</a></li>
+                <li><a href="/index.html/index.html">Landing Page</a></li>
+                <li><a href="/index.html/about.html">About Me</a></li>
+                <li><a href="/index.html/project.html">Project</a></li>
+                <li><a href="/index.html/contact me.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -33,11 +33,11 @@
         </div>
      </section>
 
-     <section class="pd-gallery">
+     <section class="fe-gallery">
         <h2>UIUX Gallery</h2>
         <p>My work showcase some designs and frontend solutions created for a varying 
             range of different business types. i really love the challenge that different ideas bring.</p>
-        <div class="uiux container">
+        <div class="uiux-container">
             <img src="/resources/images/UIUX.jpg.png" alt="Web design">
             <img src="/resources/images/UIUX1.jpg.png" alt="Mobile design">
             <img src="/resources/images/UIUX2.jpg.png" alt="Junior WAEC Result Template">
@@ -61,7 +61,7 @@
         </div>
       </section>
 
-      <section class="fe-gallery">
+      <section class="fed-gallery">
         <h2>View some selected codes below.</h2>
         <div class="frontend-container">
             <img src="/resources/images/fe1'jpg.jpg" alt="codes">
