--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Amaka Landing Page</title>
-    <link rel="stylesheet" href="/index.html/main.css">
+    <link rel="stylesheet" href="../index.html/main.css">
 </head>
 <body>
     <!-- Header section -->
@@ -12,10 +12,10 @@
             <div class="logo">Amaka </div>
             <nav>
                 <ul>
-                    <li><a href="/index.html/index.html">Landing Page</a></li>
-                    <li><a href="/index.html/about.html">About Me</a></li>
-                    <li><a href="/index.html/project.html">Project</a></li>
-                    <li><a href="/index.html/contact me.html">Contact Me</a></li>
+                    <li><a href="../index.html/index.html">Landing Page</a></li>
+                    <li><a href="../index.html/about.html">About Me</a></li>
+                    <li><a href="../index.html/project.html">Project</a></li>
+                    <li><a href="../index.html/contact me.html">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,13 +37,13 @@
                 <div class="project-p"><div class="project-pp">
                     <p>Here are some of the world class design codes. 
                         What are you waiting for? </p></div>
-                        <img src="/resources/images/img_1737055037417.jpg" alt="">
+                        <img src="../resources/images/img_1737055037417.jpg" alt="">
                     </div>
                     <button style="width: 16%; padding: 8px; background-color: aqua;"> <a href="/project file/project.html">Click here for more</a></button>
           </section>
           <!-- About Section -->
           <section id="about">
-            <div class="about"><img src="/resources/images/Amaka.jpg.jpg" 
+            <div class="about"><img src="../resources/images/Amaka.jpg.jpg" 
                 alt="Amaka"></div>
                 <div class="about-text"><h2>My name is Okeke Chiamaka Martha</h2>
                 <p>I design and also collaborate with other designers, optimize 
@@ -76,13 +76,13 @@
             <p>2025 Amaka Okeke. All right reserved</p>
             <div class="social-links">
                 <a href="https://www.facebook.com/amaka.okeke.980" target="_blank">
-                    <img src="/resources/images/facebook.png" alt="facebook"></a>
+                    <img src="../resources/images/facebook.png" alt="facebook"></a>
                     <a href="https://www.linkedin.com/in/amaka-okeke-963a9939/" target="_blank">
-                        <img src="/resources/images/Linkedin.png" alt="Linkedin"></a>
+                        <img src="../resources/images/Linkedin.png" alt="Linkedin"></a>
                     <a href="https://www.instagram.com/amaka.okeke.980/" target="_blank">
-                        <img src="/resources/images/instagram.png" alt="Instagram"></a>
+                        <img src="../resources/images/instagram.png" alt="Instagram"></a>
                         <a href="https://www.figma.com/design/zdC8yuqz6VhhwSmN7q88Jb/Okeke-Chiamaka
-                        -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="/resources/images/figma.png" alt=""></a>
+                        -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="../resources/images/figma.png" alt=""></a>
 
             </div>
            </footer>
