--- a/index.html/index.html
+++ b/index.html/index.html
@@ -111,7 +111,7 @@
 
           <!-- Contact form Section-->
           <section id="contact">
-            <h2 style="text-align: center;">Do You Want To Drive More Scalable Organic Growth? Contact Me </h2>
+            <h2 style="text-align: center;">Do You Want To Drive More Scalable Organic Growth?</h2>
             <h2 style="text-align: center;">Contact me</h2>
             <form action="">
                 <label for="name">Name: </label>
@@ -134,13 +134,13 @@
             <p>2025 Amaka Okeke. All right reserved</p>
             <div class="social-links">
                 <a href="https://www.facebook.com/amaka.okeke.980" target="_blank">
-                    <img src="../resources/images/facebook.png" alt="facebook"></a>
+                    <img src="../resources/images/facebook.png" alt="facebook">Facebook</a>
                     <a href="https://www.linkedin.com/in/amaka-okeke-963a9939/" target="_blank">
-                        <img src="../resources/images/Linkedin.png" alt="Linkedin"></a>
+                        <img src="../resources/images/Linkedin.png" alt="Linkedin">Linkedin</a>
                     <a href="https://www.instagram.com/amaka.okeke.980/" target="_blank">
-                        <img src="../resources/images/instagram.png" alt="Instagram"></a>
+                        <img src="../resources/images/instagram.png" alt="Instagram">Instagram</a>
                         <a href="https://www.figma.com/design/zdC8yuqz6VhhwSmN7q88Jb/Okeke-Chiamaka
-                        -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="../resources/images/figma.png" alt=""></a>
+                        -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="../resources/images/figma.png" alt="">Figma</a>
 
             </div>
            </footer>
