--- a/index.html/index.html
+++ b/index.html/index.html
@@ -143,13 +143,13 @@
             <p>2025 Amaka Okeke. All right reserved</p>
             <div class="social-links">
                 <a href="https://www.facebook.com/amaka.okeke.980" target="_blank">
-                    <img src="../resources/images/Facebook.png" alt="facebook"></a>
+                    <img src="../resources/images/Facebook.jpg.png" alt="facebook"></a>
                     <a href="https://www.linkedin.com/in/amaka-okeke-963a9939/" target="_blank">
                         <img src="../resources/images/Linkedin.ipg.png" alt="Linkedin"></a>
                     <a href="https://www.instagram.com/amaka.okeke.980/" target="_blank">
-                        <img src="../resources/images/Instagram.png" alt="Instagram"></a>
+                        <img src="../resources/images/Instagram.jpg.png" alt="Instagram"></a>
                         <a href="https://www.figma.com/design/zdC8yuqz6VhhwSmN7q88Jb/Okeke-Chiamaka
-                        -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="../resources/images/Figma.png" alt=""></a>
+                        -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="../resources/images/Figma.jpg.png" alt=""></a>
 
             </div>
            </footer>
