--- a/index.html/index.html
+++ b/index.html/index.html
@@ -10,6 +10,7 @@
     <!-- Header section -->
         <header>
             <div class="logo"><img src="../resources/images/Logo.png" alt="Amaka" width="55px" height="60px"></div>
+          <div class="nav">
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
@@ -17,6 +18,7 @@
                     <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </nav>
+         </div>
         </header>
         <!-- Hero section -->
          <section class="hero">
@@ -140,8 +142,8 @@
            <br>
           <!-- footer Section -->
            <footer>
+            <div class="ftt"> <h4>2025 Amaka Okeke. All right reserved</h4></div>
             <div class="social-links">
-                <p>2025 Amaka Okeke. All right reserved</p>
                 <a href="https://www.facebook.com/amaka.okeke.980" target="_blank">
                     <img src="../resources/images/Facebook.jpg.png" alt="facebook"></a>
                     <a href="https://www.linkedin.com/in/amaka-okeke-963a9939/" target="_blank">
