--- a/index.html/index.html
+++ b/index.html/index.html
@@ -8,68 +8,79 @@
 </head>
 <body>
     <!-- Header section -->
-        <header>
-            <div class="logo"><img src="../resources/images/Logo.png" alt="Amaka" width="55px" height="60px"></div>
-          <div class="nav">
+    <div id="header">
+        <div class="container">
             <nav>
+                <p>Amaka</p>
                 <ul>
-                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#project">Project</a></li>
-                    <li><a href="#contact">Contact Me</a></li>
-                </ul>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>   
             </nav>
-         </div>
-        </header>
-        <!-- Hero section -->
-         <section class="hero">
-            <h1>
-                 Creative Designer & Developer   
-            </h1>
-            <p>
-                I design and also translate UI/UX wireframes and designs into high-quality 
-                efficient code using HTML and CSS
-            </p>
-         </section>
-         <br>
-         <br>
-         <section id="about" class="about">
-            <div class="about-text">
-                <h2>About Amaka Okeke</h2>
-                <br>
-                <p> Amaka Okeke is currently working at Great Benissant College in Lagos as a 
-                    tutor in Data Processing and also coaching the senior secondary in coding.
-                     She is a creative designer and a developer who aims to work with small businesses 
-                     and marginalized communities to bring their passions to life. She offers both design 
-                     and development services of web applications or websites.</p>
-             <br>
-          <section>
-            <div class="about"><img src="../resources/images/Amaka.jpg.jpg" 
-                alt="Amaka"></div>
-                <div class="about-text"><h2>Okeke Chiamaka Martha</h2>
-                <p>I design and also collaborate with other designers, optimize 
-                    applications, develop features, and maintain brand consistency 
-                    for user-facing interfaces</p>
+            <img src="../resources/images/Amaka.jpg.png" alt="" style="position: absolute; display: flex;">
+                <div class="header-text">
+                    <h2>Hi, I am</h2>
+                    <h1> Okeke Chiamaka Martha</h1>
+                    <h2>
+                     Developer / Creative Designer     
+                     </h2>
+                     <br>
+                     <p>
+                     I design and also translate UI/UX wireframes and designs <br> into high-quality 
+                     efficient code using HTML and CSS
+                     </p>
                 </div>
-          </section>
             </div>
-            </section>
-            <br>
+        </div>
+        </header>
+<br>
+<br>
+        <!-- About section -->
+        <div id="about">
+        <div class="container">
+                <div class="amaka-text"><h1 class="sub-title">About Me</h1>
+                    <p> Amaka Okeke is currently teaching Data Processing and Mathematics in Great Benissant College in Lagos 
+                        and also coaching the senior secondary in coding.
+                        She is a creative designer and a developer who aims to work with small businesses 
+                        and marginalized communities to bring their passions to life. She offers both design 
+                        and development services of web applications or websites.
+                         <br>
+                         <br>
+                        She designs and also collaborate with other designers, optimize 
+                    applications, develop features, and maintain brand consistency 
+                    for user-facing interfaces.
+                    </p>     
+                </div>
+        </div>    
+        </div>
             <br>
          <!-- Project section -->
-          <section id="project" class="project">
-            <h1>As a Designer</h1>
-            <h2>I turn ideas into real life products...</h2>
-          </section>
+         <div id="project">
+            <div class="container">
+            <div class="row">
+                <div class="designer"><h1 class="sub-title">As a Designer</h1>
+                    <div class="prd"><p>User Interface</p></div>
+                    <div class="prd"><p>User Eperience</p></div>
+                    <div class="prd"><p>Graphic Design</p></div>
+                    <div class="prd"><p>Brand Identity</p></div>
+                </div>
+                <div class="developer"><h1 class="sub-title">AS a Developer</h1>
+                    <div class="pd"><p>Semantic HTML</p></div>
+                    <div class="pd"><p>Clean CSS</p></div>
+                    <div class="pd"><p>VSCode</p></div>
+                    <div class="pd"><p>GitHub</p></div>
+                </div>
+            </div>
+            </div>
+         </div>
 
-          <section id="pd">
-            <div>
-                <p>Product designer with a wide range of design skills to prototype 
-                    your projects. I offer the following services:  </p>
+         <!-- -------Services/ My Work----- -->
+          
+         <div id="servives">
+            <div class="container">
+                <div><h1>My services / Work</h1></div>
             <div class="pdp">
-            <div class="prd"><p>User Interface</p></div>
-            <div class="prd"><p>User Eperience</p></div>
-            <div class="prd"><p>Graphic Design</p></div>
-            <div class="prd"><p>Brand Identity</p></div>
             </div>
          </section>
          <br>
@@ -90,33 +101,30 @@
                 <div class="feg"><img src="../resources/images/UIUX4.lpg.png" alt="online booking invoice">
                     <p> Led the team that designed the layout and navigation of Afribite website</p></div>
             </div>
-         </section>
+        </div>
+        </div>
          <br>
          <br>
         
          <!-- Frontend Dev Section -->
           <section class="Frontend">
-            <div>
+            <div class="container">
                 <h1> As a Frontend developer</h1>
-                <h2>Amaka writes clean, fast, elegant and efficient code with 
-                    these services below:</h2>
+                <p>Amaka writes clean, fast, elegant and efficient code</p>
                     <br>
             </div>
             <div class="front-p">
-                <div class="pd"><p>Semantic HTML</p></div>
-                <div class="pd"><p>Clean CSS</p></div>
-                <div class="pd"><p>VSCode</p></div>
-                <div class="pd"><p>GitHub</p></div>
             </div>
           </section>
           <br>
 
           <section class="fed-gallery">
-            <p>View some selected codes below.</p>
+            <div class="container">
             <div class="frontend-container">
                 <div class="fed"><img src="../resources/images/Amaka code 2.jpj.png" alt="codes"></div>
                 <div class="fed"><img src="../resources/images/Amaka code .jpg1.png" alt="codes"></div>           
             </div>
+        </div>
           </section>
 
           <!-- Contact form Section-->
