--- a/index.html/index.html
+++ b/index.html/index.html
@@ -86,7 +86,7 @@ style="background-size: cover; background-position: center;">
             <br>
             <div class="uiux"><h2>UIUX Gallery</h2>
             <p>My work showcase some designs and frontend solutions created for a varying 
-                range of different business types. i really love the challenge that different ideas bring.</p>
+                range of different business types. I really love the challenge that different ideas bring.</p>
             </div>
         <div class="card-container">
             <div class="card">
