--- a/index.html/index.html
+++ b/index.html/index.html
@@ -11,7 +11,7 @@
     <!-- ---------Header / Navbar section -->
 <div id="header">
 <div class="container">
-    <nav>
+    <nav class="navbar">
         <div class="logo">Amaka</div>
         <ul>
             <li><a href="#about">About</a></li>
@@ -19,23 +19,21 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <img src="../resources/images/Amaka.jpg.png" 
+    <img class="header_img" src="../resources/images/Amaka.jpg.png" 
 style="background-size: cover; background-position: center;">
 <div class="header-text">
     <h3>Developer / Creative Designer </h3>
     <h1>Hi, I am <br> Okeke <span>Chiamaka</span> M.</h1>
     <br>
     <p>
-        I design also translate UI/UX wireframes and designs <br> into high-quality 
+        I design and also translate UI/UX wireframes and designs into high-quality 
         efficient code using HTML and CSS
     </p>
 </div>
 </div>
 </div>
 <br>
-<br>
-<br>
-<br>
+
 <!-- ------------------About Section---------- -->
 <div id="about">
     <div class="container">
@@ -44,7 +42,7 @@ style="background-size: cover; background-position: center;">
                 and also coaching the senior secondary in coding.
                 She is a creative designer and a developer who aims to work with small businesses 
                 and marginalized communities to bring their passions to life. She offers both design 
-                and development services of web applications or websites.
+                and development services of web applications and mobile applications.
                  <br>
                  <br>
                 She designs and also collaborate with other designers, optimize 
@@ -59,21 +57,21 @@ style="background-size: cover; background-position: center;">
 <br>
 
 <!-- ---------------------Services/Projects Section------------------- -->
- <div id="project">
+<div id="project">
     <div class="container">
         <h1>My Services/Projects</h1>
         <div class="container">
             <div class="row">
-                <div class="designer"><h1 class="sub-title">As a Designer</h1>
-                <p>I offer the following services:</p>
+                <div class="designer">
+                <p><span>As a Designer</span> <br>I offer the following services:</p>
                 <br>
                     <div class="prd"><p>>User Interface</p></div>
                     <div class="prd"><p>>User Eperience</p></div>
                     <div class="prd"><p>>Graphic Design</p></div>
                     <div class="prd"><p>>Brand Identity</p></div>
                 </div>
-                <div class="developer"><h1 class="sub-title">AS a Developer</h1>
-                    <p>I offer the following services:</p>
+                <div class="developer">
+                    <p><span>AS a Developer</span><br>I offer the following services:</p>
                     <br>
                     <div class="pd"><p>>Semantic HTML</p></div>
                     <div class="pd"><p>>Clean CSS</p></div>
@@ -81,7 +79,7 @@ style="background-size: cover; background-position: center;">
                     <div class="pd"><p>>GitHub</p></div>
                 </div>
             </div>
-            </div>
+        </div>
             <br>
             <br>
             <div class="uiux"><h2>UIUX Gallery</h2>
@@ -94,36 +92,36 @@ style="background-size: cover; background-position: center;">
                 <div class="card-content">
                     <h2>Web design</h2>
                     <p>Designed different responsive websites and web APPS</p>
-               </div>
             </div>
+        </div>
             <div class="card">
                 <img src="../resources/images/UIUX3.pjg.png" alt="Coding Reward Frame Template">
                 <div class="card-content">
                     <h2>Coding Reward Frame Template</h2>
                     <p>Designed reward template for GBS coding classes</p>
                </div>
-            </div>
+        </div>
             <div class="card">
                 <img src="../resources/images/UIUX4.lpg.png" alt="Online booking invoice">
                 <div class="card-content">
                     <h2>Resturant Online Booking invoice</h2>
                     <p>Led the team that designed the layout and navigation of Afribite website</p>
                </div>
-            </div>
+        </div>
             <div class="card">
                 <img src="../resources/images/UIUX1.jpg.png" alt="Mobile Design">
                 <div class="card-content">
                     <h2>Mobile Design</h2>
                     <p>Designed different user interface mobile Apps</p>
                </div>
-            </div>
+        </div>
             <div class="card">
                 <img src="../resources/images/UIUX2.jpg.png" alt="Junior WAEC Result Template">
                 <div class="card-content">
                     <h2>Junior WAEC Result Template</h2>
                     <p>Designed Junior Secoundary result templates for different schools</p>
                </div>
-            </div>
+        </div>
             <div class="card">
                 <img src="../resources/images/Amaka code .jpg1.png" alt="Coding Reward Frame Template">
                 <div class="card-content">
@@ -158,6 +156,7 @@ style="background-size: cover; background-position: center;">
        <br>
       <!-- footer Section -->
        <footer>
+        <div class="container">
         <div class="ftt"> <h4>2025 Amaka Okeke. All right reserved</h4></div>
         <div class="social-links">
             <a href="https://www.facebook.com/amaka.okeke.980" target="_blank">
@@ -169,6 +168,7 @@ style="background-size: cover; background-position: center;">
                     <a href="https://www.figma.com/design/zdC8yuqz6VhhwSmN7q88Jb/Okeke-Chiamaka
                     -Web-Dev-Project?node-id=2-2&t=ICVXMRZRIo7c2DaJ-1" target="_blank"><img src="../resources/images/figma.png" alt=""></a>
 
+        </div>
         </div>
        </footer>
 </body>
