--- a/index.html/index.html
+++ b/index.html/index.html
@@ -50,6 +50,9 @@ style="background-size: cover; background-position: center;">
             for user-facing interfaces.
             </p>     
         </div>
+        <div class="about-img">
+            <img src="../resources/images/Amaka.jpg.png" alt="Amaka pix">
+        </div>
     </div>
 
 </div>
