--- a/index.html/index.html
+++ b/index.html/index.html
@@ -38,17 +38,10 @@ style="background-size: cover; background-position: center;">
 <div id="about">
     <div class="container">
         <div class="amaka-text"><h1 class="sub-title">About Me</h1>
-            <p> Amaka Okeke is currently teaching Data Processing and Mathematics in Great Benissant College, Lagos 
-                and also coaching the senior secondary in coding.
-                She is a creative designer and a developer who aims to work with small businesses 
+            <p> Amaka Okeke is currently teaching Data Processing and Mathematics in Great Benissant College (GBC), Lagos and also
+                coaches the senior secondary students in coding classes. She is a creative designer and a developer who aims to work with small businesses 
                 and marginalized communities to bring their passions to life. She offers both design 
-                and development services of web applications and mobile applications.
-                 <br>
-                 <br>
-                She designs and also collaborate with other designers, optimize 
-            applications, develop features, and maintain brand consistency 
-            for user-facing interfaces.
-            </p>     
+                and development services of web applications and mobile applications.     
         </div>
         <div class="about-img">
             <img src="../resources/images/Amaka.jpg.png" alt="Amaka pix">
