--- a/index.html/index.html
+++ b/index.html/index.html
@@ -43,6 +43,11 @@ style="background-size: cover; background-position: center;">
                 and marginalized communities to bring their passions to life. She offers both design 
                 and development services of web applications and mobile applications.     
         </div>
+        <br>
+        <div class="web">
+            <p>I am proficiency in design software like Adobe XD, Dreamweaver, Photoshop, and Figma. I work to create  
+         intuitive, efficient, and enjoyable products for users.</p>
+        </div>
         <div class="about-img">
             <img src="../resources/images/Amaka.jpg.png" alt="Amaka pix">
         </div>
